# hotpixels

./: .clang_format  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run.bat  run.sh
hotpixels.lrdevplugin/: DarkFrameExport.lua  ExportServiceProvider.lua  ImageExport.lua  Info.lua  Util.lua
models/: hotpixel_cnn_syn_fp32.pt
src/: main.py
src/hotpixels/: app.py  dng_vendor_data.py  gpu.py  gui.py  hot_pixel_segmentation_cnn.py  image.py  preferences.py  profile.py
src/hotpixels/ui/: __init__.py  formatters.py  image_correction_tab.py  image_correction_tab.ui  image_graphics_view.py  main_window.py  main_window.ui  plot_widget.py  profile_creation_tab.py  profile_creation_tab.ui  profile_library_tab.py  profile_library_tab.ui  workers.py
src/setup/: lrcPath.py  lrc_path.py  probe_gpu.py  setup.ps1
